# bc-app

./: CLAUDE.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
docs/: dp-integration-guide.md  todo.md
docs/todo/: app-tsx-refactoring-2025.md  app-tsx-refactoring-result.md  app-tsx-safety-tests.md  minimal-safety-tests.md  refactoring-app-tsx.md  testcode.md  websocket-optimization-v3.md
src/: App.tsx  SettingsPage.tsx  main.tsx  styles.css  useController.ts
src-node/: websocket.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json  settings.json
src-tauri/src/: main.rs
src/components/: AppContent.tsx  AppHeader.tsx  BeatStatus.tsx  BeatStatusDP.tsx  ConnectionSettings.tsx  ControllerDisplay.tsx  DPGamepadSelector.tsx  DPMode.tsx  ErrorMessage.tsx  GamepadSelector.tsx  IIDXController.tsx  IIDXControllerDP.tsx  PlayModeSettings.tsx  SPMode.tsx  SettingsPanel.tsx
src/constants/: app.ts  styles.ts
src/contexts/: AppSettingsContext.tsx
src/hooks/: useAppMode.ts  useController.ts  useDPAssignmentRef.ts  useDPController.ts  useGamepadAssignment.ts  useGamepadDetection.ts  useGamepadInfo.ts  useGamepadPlugin.ts  useLocalIp.ts  useLocalStorage.ts  useModeChange.ts  useMultiGamepadDetection.ts  useSettings.ts  useTauriWindow.ts  useWebSocket.ts  useWebSocketDP.ts  useWebSocketData.ts  useWindowResize.ts
src/test/: appIntegration.test.ts  setup.ts
src/types/: controller.ts  gamepad.ts  settings.ts  websocket.ts
src/utils/: appBusinessLogic.test.ts  appBusinessLogic.ts  calculateStats.test.ts  calculateStats.ts  compareControllerStatus.ts  controllerCompare.ts
